--- a/Desktop/instiltWebsite/DESIGN/milestone.css
+++ b/Desktop/instiltWebsite/DESIGN/milestone.css
@@ -25,6 +25,7 @@
     --black: #000000;
 }
 
+//reset all margins and padding to zero
 *{
     margin: 0;
     padding: 0;
@@ -40,7 +41,7 @@
     margin: 100px auto;
 }
 
-
+//Bringing the list items to center of webpage
 #milestone ul li{
     display: inline-block;
     width: 200px;
@@ -48,6 +49,7 @@
     position: relative;
 }
 
+//div with information
 #milestone ul li .milestone-info{
     position: relative;
     visibility: hidden;
@@ -61,6 +63,7 @@
     border-radius: 15px ;
 }
 
+//Add a indicator sign below the div
 #milestone ul li .milestone-info:after{
     content: '';
     position: absolute;
@@ -81,11 +84,13 @@
     margin-bottom: 5px;
 }
 
+//bring the the a tag to center
 #milestone ul li a{
     display: inline-block;
     margin-top: 25px;
 }
 
+//Circular box inside the bar
 #milestone ul li a .milestone-indicator{
     position: relative;
     height: 25px;
@@ -95,7 +100,7 @@
     z-index: 1;
 
 }
-
+//Create the line
 #milestone ul li .milestone-line:after{
     content: '';
     height: 35px;
@@ -108,21 +113,8 @@
     bottom: 2px;
     
 }
-
+// change the hover color
 #milestone ul li a:hover .milestone-indicator{
     background: var(--primary);
 }
 
-/* #milestone ul li:first-child a:after{
-    border-width: 2px 2px 2px 2px;
-    border-color: var(--success) transparent var(--success) var(--success);    
-    border-style: solid;
-    border-radius: 5px;
-}
-
-#milestone ul li:last-child a:after{
-    border-width: 2px 2px 2px 2px;
-    border-color: var(--success) var(--success) var(--success) transparent;    
-    border-style: solid;
-    border-radius: 5px;
-} */
