--- a/Desktop/instiltWebsite/DESIGN/milestone.css
+++ b/Desktop/instiltWebsite/DESIGN/milestone.css
@@ -25,7 +25,7 @@
     --black: #000000;
 }
 
-//reset all margins and padding to zero
+/*reset all margins and padding to zero*/
 *{
     margin: 0;
     padding: 0;
@@ -41,7 +41,8 @@
     margin: 100px auto;
 }
 
-//Bringing the list items to center of webpage
+/*Bringing the list items to center of webpage*/
+
 #milestone ul li{
     display: inline-block;
     width: 200px;
@@ -49,7 +50,7 @@
     position: relative;
 }
 
-//div with information
+/*div with information*/
 #milestone ul li .milestone-info{
     position: relative;
     visibility: hidden;
@@ -63,7 +64,7 @@
     border-radius: 15px ;
 }
 
-//Add a indicator sign below the div
+/*Add a indicator sign below the div*/
 #milestone ul li .milestone-info:after{
     content: '';
     position: absolute;
@@ -84,13 +85,13 @@
     margin-bottom: 5px;
 }
 
-//bring the the a tag to center
+/*bring the the a tag to center*/
 #milestone ul li a{
     display: inline-block;
     margin-top: 25px;
 }
 
-//Circular box inside the bar
+/*Circular box inside the bar*/
 #milestone ul li a .milestone-indicator{
     position: relative;
     height: 25px;
@@ -100,7 +101,7 @@
     z-index: 1;
 
 }
-//Create the line
+/*Create the line*/
 #milestone ul li .milestone-line:after{
     content: '';
     height: 35px;
@@ -113,7 +114,7 @@
     bottom: 2px;
     
 }
-// change the hover color
+/* change the hover color */
 #milestone ul li a:hover .milestone-indicator{
     background: var(--primary);
 }
